Fixed report according to Anders comments

--- a/Thesis report/examplethesis.tex
+++ b/Thesis report/examplethesis.tex
@@ -128,9 +128,9 @@ För att ta fram användargränssnitt bör en designprocess för UX, även kalla
 
 Ytterligare en svårighet som finns vid framtagandet av interaktiva prototyper är att detta kan vara väldigt tidskrävande för en UX-designer. Detta eftersom resultatet av varje användarinteraktion som ska finnas i slutprodukten även skulle behöva tas fram för prototypen. Därför leder detta problem, samt de ovannämnda, till att extra tid måste läggas ned av UX-designern vilket även ökar kostnader. 
 
-I detta projekt användes därför ett verktyg där produktframtagningen och prototypskapandet kunde ske samtidigt. Syftet var att utvärdera designprocessen vid användningen av det verktyget jämfört med den vanligen använda designprocessen. Verktyget skulle användas för hämtning, tillfällig lagring och visualisering av data. Det fanns en mängd olika verktyg för detta som t.ex. Elastic Stack, Loggly och Scalyr. Eftersom Elastic Stack säger sig vara “en världsledande mjukvaruleverantör för att göra strukturerad och ostrukturerade data användbar i realtid för användarfall som sökning, loggning, säkerhet och analys” [1] valdes detta verktyg. I samma artikel presenteras statistiken att Elastic Stack har över 100 miljoner nedladdningar vilket visar på att det är extremt populärt och använt. Dessutom var Elasticsearch, som är sökmotorn i Elastic Stack och möjliggör lagring, sökning och analys av stora mängder data i nära real-tid, den mest populära sökmotorn enligt en rakning av sökmotorer som gjorts på DB-Engines i Maj 2018 [2]. Eftersom Kibana används för visualisering av data som finns i Elasticsearch är det även möjligt för alla Elasticsearch användare att använda Kibana vilket skulle innebära en stor mängd potentiella användare av Kibana. Under projektets gång låg fokus på Kibana eftersom det är visualiseringsverktyget i Elastic Stack.
+I detta projekt användes därför ett verktyg där produktframtagningen och prototypskapandet kunde ske samtidigt. Syftet var att utvärdera designprocessen vid användningen av det verktyget jämfört med den vanligen använda designprocessen. Verktyget skulle användas för hämtning, tillfällig lagring och visualisering av data. Det fanns en mängd olika verktyg för detta som till exempel Elastic Stack, Loggly och Scalyr. Eftersom Elastic Stack säger sig vara “en världsledande mjukvaruleverantör för att göra strukturerad och ostrukturerade data användbar i realtid för användarfall som sökning, loggning, säkerhet och analys” [1] valdes detta verktyg. I samma artikel presenteras statistiken att Elastic Stack har över 100 miljoner nedladdningar vilket visar på att det är extremt populärt och använt. Dessutom var Elasticsearch, som är sökmotorn i Elastic Stack och möjliggör lagring, sökning och analys av stora mängder data i nära realtid, den mest populära sökmotorn enligt en rakning av sökmotorer som gjorts på DB-Engines i Maj 2018 [2]. Eftersom Kibana används för visualisering av data som finns i Elasticsearch är det även möjligt för alla Elasticsearch användare att använda Kibana vilket skulle innebära en stor mängd potentiella användare av Kibana. Under projektets gång låg fokus på Kibana eftersom det är visualiseringsverktyget i Elastic Stack.
 
-Dataströmmen som användes som exempeldata vid visualiseringen var från Transportstyrelsens öppna databas gällande betalstationer i Sverige. Detta möjliggjorde en visualisering av trafik där användare kunde få information som t.ex. antal fordon som passerade ett valt område, fördelning av fordonstyper, var fordonsägare som åkte igenom valda betalstationer bodde m.m.
+Dataströmmen som användes som exempeldata vid visualiseringen var från Transportstyrelsens öppna databas gällande betalstationer i Sverige. Detta möjliggjorde en visualisering av trafik där användare kunde få information som till exempel antal fordon som passerade ett valt område, fördelning av fordonstyper, var fordonsägare som åkte igenom valda betalstationer bodde m.m.
 
 \section{Målsättning}
 Detta arbete syftar till att undersöka om, och hur Kibana kan förbättra UX-designprocessen vid visualisering av data. Ett av målen i det här projekt var därför att ta fram viktiga problem och eventuella brister inom UX-designprocessen och undersöka dessa. Det skulle även skapas en produkt med hjälp av Elastic Stack där Kibana skulle användas som visualiseringsverktyg. Framtagningen av produkten gjordes för att kunna uppfylla det huvudsakliga målet med projektet vilket var en UX-designprocess som togs fram vid användning av Kibana. Den skulle sedan utvärderas av erfarna UX-designers för att jämföras med den traditionella UX-designprocessen. 
@@ -143,7 +143,7 @@ Projektet skulle delas upp i följande mer detaljerade delmål:
 
 \item Bedöma UX-designprocessen vid användning av Kibana baserat på utvärderingar av erfarna UX-designers.
 
-\item Bedöma kommunikationen mellan Agila utvecklare och UX-designers baserat på projektdeltagarnas erfarenhet av båda rollerna under UX-designprocessen vid användning av Kibana.
+\item Bedöma kommunikationen mellan Agila utvecklare och UX-designers baserat på författarnas erfarenhet av båda rollerna under UX-designprocessen vid användning av Kibana.
 \end{itemize} 
 
 För att kunna utvärdera och bedöma UX-designprocessen vid användning av Kibana skulle en interaktiv \textit{dashboard} skapas med hjälp av Kibana som presenterade Transportstyrelsens data från betalstationer. För att göra detta skulle följande delsteg utföras: Utforska slutanvändare och ta fram deras behov och krav, ta fram lösningar som uppfyller dessa behov och krav, implementera lösningarna i en interaktiv \textit{dashboard} i Kibana, testa produkten mot slutanvändare genom djupintervjuer och upprepa tidigare delsteg tills produkten blev accepterad av slutanvändaren. För att visualisera data från Transportstyrelsen skulle även data förberedas för visualisering. Detta genom att skapa en webbtjänst som skulle hämta data från Transportstyrelsen och modifiera data så att de skulle bli kompatibla med Kibana.
@@ -317,14 +317,14 @@ För att identifiera utmaningar i den traditionella designprocessen genomfördes
 
 \section{Utvärdering av UX-designprocessen vid användning av Kibana}
 
-Efter att produkten tagits fram och UX-designprocessen specificerats gjordes en utvärdering av UX-designprocessen. Denna utvärdering utfördes av UX-designers via ett formulär där hela UX-designprocessen vid användning av Kibana beskrevs. Även en beskrivning av visualiseringsverktyget Kibana inkluderades för att möjliggöra UX-designers som inte haft erfarenhet av verktyget att besvara formuläret. I formuläret skulle sedan påståenden besvaras angående olika aspekter av UX-designprocessen i Kibana såsom begränsningar och särskilda funktioner. Erfarna UX-designers var vana vid att arbeta enligt den traditionella UX-designprocessen och ansågs därför som lämpliga kandidater för undersökningen. En erfaren UX-designer definierade projektdeltagarna som en person som hade tre år eller mer erfarenhet av att arbeta med design. Formuläret skickades ut till 60 kandidater genom deras profiler på LinkedIn och formuläret kan hittas i A.1.
+Efter att produkten tagits fram och UX-designprocessen specificerats gjordes en utvärdering av UX-designprocessen. Denna utvärdering utfördes av UX-designers via ett formulär där hela UX-designprocessen vid användning av Kibana beskrevs. Även en beskrivning av visualiseringsverktyget Kibana inkluderades för att möjliggöra UX-designers som inte haft erfarenhet av verktyget att besvara formuläret. I formuläret skulle sedan påståenden besvaras angående olika aspekter av UX-designprocessen i Kibana såsom begränsningar och särskilda funktioner. Erfarna UX-designers var vana vid att arbeta enligt den traditionella UX-designprocessen och ansågs därför som lämpliga kandidater för undersökningen. Författarna definierade en erfaren UX-designer som en person som hade tre år eller mer erfarenhet av att arbeta med design. Formuläret skickades ut till 60 kandidater genom deras profiler på LinkedIn och formuläret kan hittas i A.1 i Appendix.
 
-Det som utvärderingen fokuserade på var svårigheter inom UX-designprocessen, främst det tredje steget, prototypskapande och det fjärde, testning. Inom skapandet av prototypen fanns det svårigheter vid att få prototypen och slutprodukten att vara lika främst gällande det visuella, innehållet, interaktionen och funktionaliteten eftersom utvecklare och designers använde olika verktyg. Ändringar som skulle göras på designen kunde även komma att bli kostsamma och därför fokuserade även utvärderingen på optimering av ändring av användargränssnittet. Vid testningen var det en del faktorer som försvårade att testa den riktiga funktionaliteten på produkten, bland annat att det var väldigt tidskrävande och att designers inte alltid visste systemets begränsningar. UX-designprocessen utfördes så många omgångar det krävdes för att få kunden nöjd inom tidsramen för projektet. För att utföra testningen genomfördes djupintervjuer i grupper med 5 personer. Deltagarnas användarupplevelse noterades genom ett formulär. Testningen var uppdelad i fyra moment: allmänna frågor, grundläggande trafikförståelse, avancerad trafikförståelse och sammanfattning. De tre första momenten baserades på uppgifter som skulle utföras av deltagarna. Dessa uppgifter betygsattes sedan av deltagarna baserat på svårighet vid utförandet genom en skala från ett till fem eller ett till tio. Frågorna som ställdes och de möjliga svarsalternativen finns i A.3.
+Det som utvärderingen fokuserade på var svårigheter inom UX-designprocessen, främst det tredje steget, prototypskapande och det fjärde, testning. Inom skapandet av prototypen fanns det svårigheter vid att få prototypen och slutprodukten att vara lika främst gällande det visuella, innehållet, interaktionen och funktionaliteten eftersom utvecklare och designers använde olika verktyg. Ändringar som skulle göras på designen kunde även komma att bli kostsamma och därför fokuserade även utvärderingen på optimering av ändring av användargränssnittet. Vid testningen var det en del faktorer som försvårade att testa den riktiga funktionaliteten på produkten, bland annat att det var väldigt tidskrävande och att designers inte alltid visste systemets begränsningar. UX-designprocessen utfördes så många omgångar det krävdes för att få kunden nöjd inom tidsramen för projektet. För att utföra testningen genomfördes djupintervjuer i grupper med 5 personer. Deltagarnas användarupplevelse noterades genom ett formulär. Testningen var uppdelad i fyra moment: allmänna frågor, grundläggande trafikförståelse, avancerad trafikförståelse och sammanfattning. De tre första momenten baserades på uppgifter som skulle utföras av deltagarna. Dessa uppgifter betygsattes sedan av deltagarna baserat på svårighet vid utförandet genom en skala från ett till fem eller ett till tio. Frågorna som ställdes och de möjliga svarsalternativen finns i A.3 i Appendix.
 
 
-\section{Utvärdering av kommunikationen mellan Agila utvecklare och UX-designers under UX-designprocessen vid användning av Kibana}
+\section{Utvärdering av kommunikationen mellan Agila utvecklare och UX-designers}
 
-En utvärdering gjordes även av kommunikationen mellan Agila utvecklare och UX-designers eftersom det har visat sig vara en svårighet. Under projektets gång fick projektdeltagarna erfarenhet av båda rollerna eftersom de dels skapade systemet och designen till \textit{dashboarden}. Utvärderingen gjordes genom en analys av tankar, erfarenheter och noteringar som gjorts av projektdeltagarna under projektets gång. 
+En utvärdering gjordes även av kommunikationen mellan Agila utvecklare och UX-designers eftersom det har visat sig vara en svårighet. Under projektets gång fick författarna erfarenhet av båda rollerna eftersom de dels skapade systemet och designen till \textit{dashboarden}. Utvärderingen gjordes genom en analys av tankar, erfarenheter och noteringar som gjorts av författarna under projektets gång. 
 
 
 \section{Förberedelse av data för visualisering}
@@ -458,13 +458,13 @@ UX-designprocessen som togs fram under detta projekt följde stegen i figur 4.1.
 \item Testninghandlade om att observera interaktionen mellan produkten och användare. Det kunde även göras genom demonstration av olika versioner av användargränssnittet till användarna, intervjua användaren, ställa frågor, använda sig av enkäter för att kunna identifiera svårigheter med användargränssnittet. Produkten testades mot systemet och all funktionalitet gick att testa mot användargränssnittet. Användarinteraktionen gjordes som om \textit{dashboarden} var slutprodukten. Vid önskemål av testare kunde även UI-element i produkten ändras. 
 \end{itemize}
 
-\section{Utvärdering av UX-designprocess vid användning av Kibana}
+\section{Utvärdering av UX-designprocessen vid användning av Kibana}
 Formuläret för utvärdering av UX-designprocessen vid användning av Kibana besvarades av 32 lämpliga kandidater. Eftersom formuläret skickades ut till 60 personer resulterade detta i en svarsfrekvens på 53\%. En sammanfattning av utvärderingen blev följande:
 
 \begin{itemize}
 \item Att Kibana möjliggjorde \textit{high-fidelity} vid aspekterna interaktion, funktionalitet och visualisering tyckte 88\% av deltagarna var bra eller mycket bra egenskaper.
 
-\item 69\% av deltagarna stördes väldigt mycket eller stördes lite av att det fanns begränsningar i hur anpassningsbara vissa UI-element var. Som t.ex. att tjockleken på staplar i stapeldiagram och tjockleken på cirkeldiagram med centrumhål inte gick att anpassa. 22\% av deltagarna stördes inte alls av denna begränsning.
+\item 69\% av deltagarna stördes väldigt mycket eller stördes lite av att det fanns begränsningar i hur anpassningsbara vissa UI-element var. Som till exempel att tjockleken på staplar i stapeldiagram och tjockleken på cirkeldiagram med centrumhål inte gick att anpassa. 22\% av deltagarna stördes inte alls av denna begränsning.
 
 \item Att fonten inte var så anpassningsbar i UI-element hävdade över 50\% av UX-designerna som svarade på formuläret att det störde dem väldigt mycket.
 
@@ -485,17 +485,17 @@ Formuläret för utvärdering av UX-designprocessen vid användning av Kibana be
 \item Övriga kommentarer från utvärderingen som var relaterade till UX-designprocessen var att det ofta är väldigt högt prioriterat att vara effektiv i utförandet av designprocessen men det finns undantag då designkraven måste nå en viss nivå och då, för att inte produkten ska bli oanvändbar, prioriteras den effektiva designprocessen bort. Det fanns även en deltagare som tyckte att detta visualiseringsverktyg verkade mer passande för utvecklare som snabbt ville visualisera data. Detta på grund av att det fanns alldeles för mycket begränsningar för UX-designers.
 \end{itemize}
 
-\section{Utvärdering av kommunikationen mellan Agila utvecklare och UX-designers under UX-designprocessen vid användning av Kibana}
+\section{Utvärdering av kommunikationen mellan Agila utvecklare och UX-designers}
 
-Svårigheter vid kommunikationen mellan Agila utvecklare och UX-designers eliminerades under UX-designprocessen vid användning av Kibana. Detta eftersom systemet behövde vara fullständigt innan visualiseringar kunde skapas. Eftersom begränsningar inom UX-designen vid användning av Kibana berodde på vilken typ av data som fanns tillgänglig, t.ex. om inte geografisk placering fanns tillgänglig gick det inte att visualisera data i en karta. Detta innebar att UX-designers inte behövde kommunicera med utvecklare under UX-designprocessen för att bli informerade om systemets begränsningar. 
+Svårigheter vid kommunikationen mellan Agila utvecklare och UX-designers eliminerades under UX-designprocessen vid användning av Kibana. Detta eftersom systemet behövde vara fullständigt innan visualiseringar kunde skapas. Eftersom begränsningar inom UX-designen vid användning av Kibana berodde på vilken typ av data som fanns tillgänglig, till exempel om inte geografisk placering fanns tillgänglig gick det inte att visualisera data i en karta. Detta innebar att UX-designers inte behövde kommunicera med utvecklare under UX-designprocessen för att bli informerade om systemets begränsningar. 
 
 \section{Tillämpning av UX-designprocess vid användning av Kibana}
 
-Nedanstående steg upprepades tre gånger och slutprodukten finns tillgänglig i A.5.  
+Nedanstående steg upprepades tre gånger och slutprodukten finns tillgänglig i A.5 i Appendix.  
 
 \subsection{ Utforska slutanvändare och ta fram deras behov och krav
 }
-Det första steget gick ut på att förstå användarna och deras behov. Det gjordes genom att analysera data som skulle presenteras för att komma fram till intressant information som skulle kunna lyftas fram med presentation av data. För att göra detta skapades användarprofiler, även kallas för \textit{personas}, som representerade slutanvändaren av produkten. I dessa \textit{personas} beskrevs användares behov, mål och egenskaper och finns i A.2. \textit{Personas} skapades endast under den första iterationen. Utifrån dessa \textit{personas} definierades designkraven för \textit{dashboarden} gällande visualiseringen av data. De definierade designkraven gick ut på att presentera följande information på \textit{dashboarden}:
+Det första steget gick ut på att förstå användarna och deras behov. Det gjordes genom att analysera data som skulle presenteras för att komma fram till intressant information som skulle kunna lyftas fram med presentation av data. För att göra detta skapades användarprofiler, även kallas för \textit{personas}, som representerade slutanvändaren av produkten. I dessa \textit{personas} beskrevs användares behov, mål och egenskaper och finns i A.2 i Appendix. \textit{Personas} skapades endast under den första iterationen. Utifrån dessa \textit{personas} definierades designkraven för \textit{dashboarden} gällande visualiseringen av data. De definierade designkraven gick ut på att presentera följande information på \textit{dashboarden}:
 
 \begin{itemize}
 \item Hur många bilar åker igenom varje betalstation och/eller stad?
@@ -531,7 +531,7 @@ Efter att användare godkände ritningen skapades en \textit{dashboard} i Kibana
 
 \subsection{ Testa produkten mot slutanvändare genom djupintervjuer 
 }
-Därefter utfördes testning av \textit{dashboarden} i en grupp av fem personer som representerade möjliga slutanvändare. Testningen genomfördes genom att ställa frågor till användaren angående \textit{dashboarden} och att låta användaren utföra specificerade uppgifter på \textit{dashboarden}. Det utfördes tre iterationer av UX-designprocessen vid användning av Kibana. Användaren observerades vid testningen av produkten och handlingar, tankar och åsikter under utförandet noterades och stod i fokus vid förbättring av \textit{dashboarden}. Frågor som ställdes till användarna vid testning och svaren kan hittas i A.3. Svar från dessa frågor och anteckningar från testning användes vid framtagandet av nästa \textit{dashboard}. Vid varje iteration testades varje ny \textit{dashboard} och ett detaljerat testresultat kan hittas i A.4. En sammanställning av testresultatet presenteras nedan. 
+Därefter utfördes testning av \textit{dashboarden} i en grupp av fem personer som representerade möjliga slutanvändare. Testningen genomfördes genom att ställa frågor till användaren angående \textit{dashboarden} och att låta användaren utföra specificerade uppgifter på \textit{dashboarden}. Det utfördes tre iterationer av UX-designprocessen vid användning av Kibana. Användaren observerades vid testningen av produkten och handlingar, tankar och åsikter under utförandet noterades och stod i fokus vid förbättring av \textit{dashboarden}. Frågor som ställdes till användarna vid testning och svaren kan hittas i A.3 i Appendix. Svar från dessa frågor och anteckningar från testning användes vid framtagandet av nästa \textit{dashboard}. Vid varje iteration testades varje ny \textit{dashboard} och ett detaljerat testresultat kan hittas i A.4 i Appendix. En sammanställning av testresultatet presenteras nedan. 
 
 \begin{enumerate}
 \item Första iterationens testresultat:
@@ -623,7 +623,7 @@ Testningen i UX-designprocessen vid användning av Kibana hade också några ski
 
 En stor begränsning som UX-designprocessen vid användning av Kibana hade var att den enbart skulle kunna användas för visualisering av data. Detta var en väldigt stor begränsning jämfört med den traditionella UX-designprocessen som skulle kunna användas på alla olika områden. 
 
-\section{Utvärdering av UX-designprocess vid användning av Kibana}
+\section{Utvärdering av UX-designprocessen vid användning av Kibana}
 Efter utvärderingen av UX-designprocessen kunde det konstateras att majoriteten av deltagarna hade ett positivt intryck av att ta fram och testa en produkt istället för prototyp i UX-designprocessen. Detta eftersom det säkerställde \textit{high-fidelity} av \textit{dashboarden} i tre aspekter: interaktivitet, funktionalitet och visualisering utan att det blev kostsamt eller tidskrävande. Det var även positivt eftersom all funktionalitet i systemet kunde testas på ett ekonomiskt sätt gällande både tid och pengar. 
 
 Däremot var det en väldigt stor del av deltagarna som tyckte att begränsningarna vid visualisering i Kibana var negativt eftersom UX-designerna inte hade den friheten de ofta behövde. Detta inkluderade följande: 
@@ -645,23 +645,25 @@ I Kibana filtrerades all data i alla UI-element vid filtrering av data. Detta up
 
 Ytterligare en av Kibanas egenskaper som deltagarna tyckte var positiv var möjligheten att återanvända UI-element. Detta skulle kunna spara tid för en UX-designer vid skapandet av flera \textit{dashboards} eftersom de skulle kunna återanvända samma element. Om ett UI-element ändrades på ett ställe skulle det ändras på alla ställen det förekom.
 
-\section{Utvärdering av kommunikationen mellan Agila utvecklare och UX-designers under UX-designprocessen vid användning av Kibana}
-Ett problem som togs upp i det här projektet var svårigheterna i kommunikationen mellan Agila utvecklare och UX-designers. Efter framtagandet av UX-designprocessen upplevde projektdeltagarna att kommunikationen mellan utvecklare och UX-designers eliminerades eftersom det var ett krav att systemet skulle vara klart innan UX-designen påbörjades. Därmed försvann även problemen vid kommunikationen mellan de två parterna. 
+Eftersom denna utvärdering utfördes med 32 deltagare kunde inte resultatet av utvärderingen generaliseras för alla UX-designers. Resultatet var enbart en sammanfattning av en grupp av UX-designers åsikter och tankar baserat på deras arbetserfarenhet inom design. Alla tillfrågade deltagare var opartiska och hade inte hade någon koppling med Kibana sedan tidigare kunde vilket försäkrade en objektiv uppfattning av Kibana. Dock hade det kunnat vara fördelaktigt om deltagarna i undersökningen hade fått testa på Kibana för att kunna få en högre förståelse av begränsningar inom verktyget. Däremot fanns det inte tid för detta på grund av projektets tidsbegränsningar. 
+
+\section{Utvärdering av kommunikationen mellan Agila utvecklare och UX-designers}
+Ett problem som togs upp i det här projektet var svårigheterna i kommunikationen mellan Agila utvecklare och UX-designers. Efter framtagandet av UX-designprocessen upplevde författarna att kommunikationen mellan utvecklare och UX-designers eliminerades eftersom det var ett krav att systemet skulle vara klart innan UX-designen påbörjades. Därmed försvann även problemen vid kommunikationen mellan de två parterna. 
 
 Däremot kunde det finnas ekonomiska aspekter i projekt som begränsade både tid och arbetskraft. Dessa begränsningar kunde vara faktorer som orsakade att utvecklare och UX-designers behövde arbeta parallellt från start. Eftersom detta skulle leda till att hela systemet inte kunde var klart innan UX-designen påbörjades skulle inte UX-designprocessen vid användning av Kibana kunna tillämpas. Ett undantag då det skulle gå att tillämpa denna designprocess trots ekonomiska begränsningar skulle vara om data som skulle visualiseras var kompatibel med Kibana och innehöll all information som krävdes för önskade visualiseringar. Då hade utvecklarna inte behövt spendera tid på att modifiera data och därför hade processen för att hämta och visualisera data genom Elastic Stack gått snabbare.
 
 \section{Tillämpning av UX-designprocess vid användning av Kibana} 
-I detta avsnitt kommer tillämpningen av UX-designprocessen analyseras. Även för- och nackdelar kommer tas upp och alternativa metoder som hade kunnat ge bättre resultat kommer diskuteras.  Reflektioner som kommer tas upp i detta avsnitt är baserade på projektdeltagarnas erfarenheter under projektets gång.
+I detta avsnitt kommer tillämpningen av UX-designprocessen analyseras. Även för- och nackdelar kommer tas upp och alternativa metoder som hade kunnat ge bättre resultat kommer diskuteras.  Reflektioner som kommer tas upp i detta avsnitt är baserade på författarnas erfarenheter under projektets gång.
 
 \subsection{Utforska slutanvändare och ta fram deras behov och krav} 
-Vid framtagandet av \textit{personas} var en av nackdelarna att det inte fanns en tänkt slutanvändare eftersom produkten endast skulle tas fram i syfte att testa UX-designprocessen vid användning av Kibana. Eftersom det inte fanns några tänkta användare togs dessa \textit{personas} fram av projektdeltagarna och blev då inte så specificerade som de hade kunnat blivit. Det som hade kunnat göras istället var att ställa frågor utåt genom formulär för att ta reda på vad människor hade velat ha som designkrav, eftersom den tänkta målgruppen ändå var en genomsnittlig svensk som var intresserad av trafikinformation i Sverige. Detta hade underlättat vid de andra stegen i designprocessen då det hade funnits ett mer specificerat mål och krav i alla steg.
+Vid framtagandet av \textit{personas} var en av nackdelarna att det inte fanns en tänkt slutanvändare eftersom produkten endast skulle tas fram i syfte att testa UX-designprocessen vid användning av Kibana. Eftersom det inte fanns några tänkta användare togs dessa \textit{personas} fram av författarna och blev då inte så specificerade som de hade kunnat blivit. Det som hade kunnat göras istället var att ställa frågor utåt genom formulär för att ta reda på vad människor hade velat ha som designkrav, eftersom den tänkta målgruppen ändå var en genomsnittlig svensk som var intresserad av trafikinformation i Sverige. Detta hade underlättat vid de andra stegen i designprocessen då det hade funnits ett mer specificerat mål och krav i alla steg.
 
 \subsection{Ta fram lösningar som uppfyller dessa behov och krav}
-För att ta fram lösningar krävdes det en hel del förarbete inom Kibana av projektdeltagarna, som inte hade någon erfarenhet av visualiseringsverktyget. För att ta reda på vilka möjligheter som fanns för visualisering behövde projektdeltagarna vetskap angående vilka UI-element som fanns tillgängliga, hur de kunde anpassas och hur de kunde kombineras i Kibana. Om personen som skulle använda sig av Kibana hade varit erfaren av visualiseringsverktyget, som projektdeltagarna känner sig vara efter projektet, hade detta dock inte varit ett problem. Därmed hade detta endast varit problematiskt vid den första användningen av Kibana.
+För att ta fram lösningar krävdes det en hel del förarbete inom Kibana av författarna, som inte hade någon erfarenhet av visualiseringsverktyget. För att ta reda på vilka möjligheter som fanns för visualisering behövde författarna vetskap angående vilka UI-element som fanns tillgängliga, hur de kunde anpassas och hur de kunde kombineras i Kibana. Om personen som skulle använda sig av Kibana hade varit erfaren av visualiseringsverktyget, som författarna upplevde sig vara efter projektet, hade detta dock inte varit ett problem. Därmed hade detta endast varit problematiskt vid den första användningen av Kibana.
 
 \subsection{Implementera lösningarna i en interaktiv \textit{dashboard} i Kibana}
 
-Vid skapandet av UI-elementen upplevde projektdeltagarna väldigt mycket stöd från Kibana gällande val av data som skulle ingå i dem. Det krävdes endast förståelse kring hur data aggregerades inom Kibana och ett par och efter det valdes fälten som sammanställdes och visualiserades. 
+Vid skapandet av UI-elementen upplevde författarna väldigt mycket stöd från Kibana gällande val av data som skulle ingå i dem. Det krävdes endast förståelse kring hur data aggregerades inom Kibana och ett par och efter det valdes fälten som sammanställdes och visualiserades. 
 
 Vad det gällde modifieringen av UI-elementens utseende och deras fördelning i \textit{dashboarden} var det en större utmaning i Kibana. Några av dessa var:
 
@@ -684,19 +686,19 @@ Trots alla förbättringar som gjordes efter första iterationen upplevdes \text
 
 Vid den tredje itereringen upplevdes \textit{dashboarden} mer intuitiv, strukturerad och lättare att interagera med. Information som UI-elementen presenterade var tydlig och beskrivande texten var mer synlig. 
 
-Efter att projektet slutförts ansåg projektdeltagarna att en bättre metod hade kunnat väljas för att mäta svårighetsnivå på uppgifter. När testarna själva skulle betygsätta svårighet var det väldigt beroende av känslor och åsikter, vilket ur ett UX-perspektiv var bra, men någonting som hade kunnat ge mer konkreta resultat som hade varit värdefullt vid analysen av testningen hade varit att ta tid på en testare från att uppgiften blivit förklarad till att den blivit slutförd. 
+Efter att projektet slutförts ansåg författarna att en bättre metod hade kunnat väljas för att mäta svårighetsnivå på uppgifter. När testarna själva skulle betygsätta svårighet var det väldigt beroende av känslor och åsikter, vilket ur ett UX-perspektiv var bra, men någonting som hade kunnat ge mer konkreta resultat som hade varit värdefullt vid analysen av testningen hade varit att ta tid på en testare från att uppgiften blivit förklarad till att den blivit slutförd. 
 
 \section{Förberedelse av data för visualisering}
-För att möjliggöra tillämpningen av UX-designprocessen vid användning av Kibana implementerades \textit{full-stack}utveckling under detta projekt. Vid utvecklingen förekom några svårigheter angående förberedelsen av data inför visualisering. Datakällan som valdes var statisk och mycket tid ägnades åt att simulera en dataström från den källan. Hade projektdeltagarna istället valt en datakälla som redan var strömmande hade den tiden kunnat läggas på andra saker i projektet. Datakällan som valdes borde också varit så konsistent och fullständigt för visualisering som möjligt. 
+För att möjliggöra tillämpningen av UX-designprocessen vid användning av Kibana implementerades \textit{full-stack}utveckling under detta projekt. Vid utvecklingen förekom några svårigheter angående förberedelsen av data inför visualisering. Datakällan som valdes var statisk och mycket tid ägnades åt att simulera en dataström från den källan. Hade författarna istället valt en datakälla som redan var strömmande hade den tiden kunnat läggas på andra saker i projektet. Datakällan som valdes borde också varit så konsistent och fullständigt för visualisering som möjligt. 
 
 I det här projektet lades en stor del av tiden åt modifiering av data så att de skulle gå från en icke kompatibel form i Kibana till att de blev kompatibla med Kibana. Några av modifieringarna som gjordes var att sammanställa datum och tidpunkten av varje objekt i ett nytt fält för att skapa en tidsstämpel som skulle kunna användas senare av Kibana vid visualisering. 
 
-Ytterligare en svårighet som projektdeltagarna stött på var vid visualisering av geografiska data i Kibana. Datakällan innehöll geografisk relaterad information men inte koordinater för att möjliggöra visualisering i Kibana. Det krävdes en stor informationssökning för att få fram koordinater för den data och mycket tid för modifiering av den informationen för att vara i ett kompatibelt format med Kibana. När informationen hittades i det önskade formatet lades denna information till i varje objekt som hämtades från datakällan. Hela denna process hade kunnat undvikas om det hade valts en datakälla som innehöll all information för visualisering och om informationen var kompatibel med Kibana.
+Ytterligare en svårighet som författarna stött på var vid visualisering av geografiska data i Kibana. Datakällan innehöll geografisk relaterad information men inte koordinater för att möjliggöra visualisering i Kibana. Det krävdes en stor informationssökning för att få fram koordinater för den data och mycket tid för modifiering av den informationen för att vara i ett kompatibelt format med Kibana. När informationen hittades i det önskade formatet lades denna information till i varje objekt som hämtades från datakällan. Hela denna process hade kunnat undvikas om det hade valts en datakälla som innehöll all information för visualisering och om informationen var kompatibel med Kibana.
 
-Kibana erbjöd stöd för visualisering av data på kartor men endast för ett begränsat antal länder och eftersom den datakälla som användes i detta projekt innehöll svensk geografisk information som inte fanns tillgängligt ledde detta till en till svårighet. Projektdeltagarna behövde hitta denna information, modifiera den till rätt format och lägga till den i Kibana för att möjliggöra visualisering av data på kartor. Detta var en tidskrävande process som borde tas hänsyn till när det önskas att utföra visualisering av data i kartor. Kibana är ett open-sourceprojekt och därför finns det många möjligheter för förbättringar av detta.  
+Kibana erbjöd stöd för visualisering av data på kartor men endast för ett begränsat antal länder och eftersom den datakälla som användes i detta projekt innehöll svensk geografisk information som inte fanns tillgängligt ledde detta till en till svårighet. Författarna behövde hitta denna information, modifiera den till rätt format och lägga till den i Kibana för att möjliggöra visualisering av data på kartor. Detta var en tidskrävande process som borde tas hänsyn till när det önskas att utföra visualisering av data i kartor. Kibana är ett open-sourceprojekt och därför finns det många möjligheter för förbättringar av detta.  
 
 \section{Ekonomiska och arbetsmiljömässiga aspekter}
-Under detta alla moment i detta projekt har ekonomiska och arbetsmiljömässiga aspekter betraktats. Fokus låg under hela projektet på att se om och hur Kibana kunde underlätta för UX-designprocessen vid visualisering av data. Om Kibana användes med data som var kompatibel med Kibana och systemet var avklarat innan UX-designprocessen påbörjades kunde det påverka de ekonomiska och arbetsmiljömässiga aspekterna positivt. Ur det ekonomiska perspektivet skulle företaget som tillämpade denna UX-designprocess gynnas eftersom mindre tid skulle läggas av arbetarna jämfört med den traditionella UX-designprocessen. Vilket skulle spara företaget pengar. Ur det arbetsmiljömässiga perspektivet kunde kommunikationssvårigheter mellan UX-designers och utvecklare elimineras vilket ledde till en bättre arbetsmiljö för båda parterna som kunde lägga fokus på respektive individuella områden.
+Under detta alla moment i detta projekt har ekonomiska och arbetsmiljömässiga aspekter betraktats. Fokus låg under hela projektet på att se om och hur Kibana kunde underlätta för UX-designprocessen vid visualisering av data. Om Kibana användes med data som var kompatibel med Kibana och systemet var avklarat innan UX-designprocessen påbörjades kunde det påverka de ekonomiska och arbetsmiljömässiga aspekterna positivt. Ur det ekonomiska perspektivet skulle företaget som tillämpade denna UX-designprocess gynnas eftersom mindre tid skulle läggas av arbetarna jämfört med den traditionella UX-designprocessen, vilket skulle spara företaget pengar. Ur det arbetsmiljömässiga perspektivet kunde kommunikationssvårigheter mellan UX-designers och utvecklare elimineras vilket ledde till en bättre arbetsmiljö för båda parterna som kunde lägga fokus på respektive individuella områden.
 
 \afterpage{\null\newpage}
 
@@ -705,7 +707,7 @@ Det finns många utmaningar och brister inom den traditionella designprocessen f
 
 Fördelarna med designprocessen för UX då Kibana används var att fokus låg på produkten och inte prototypen vilket resulterade i mer effektiv testning med slutanvändaren. Nackdelarna i denna designprocess för UX var begränsningar i modifiering av användargränssnittet som Kibana har, att systemet skulle vara klart innan visualisering av data i UI-element samt att data som används måste vara kompatibla med Kibana.  
 
-Trots begränsningarna gällande anpassningsbarheten av visualiseringen erbjuder Kibana lösningar på dessa problem genom att t.ex. inkludera \textit{dashboards} i webbsidor.  Eftersom Kibana är ett open-sourceprojekt ser projektdeltagarna att många begränsningar i Kibana kan komma att elimineras i framtiden. 
+Trots begränsningarna gällande anpassningsbarheten av visualiseringen erbjuder Kibana lösningar på dessa problem genom att till exempel inkludera \textit{dashboards} i webbsidor.  Eftersom Kibana är ett open-sourceprojekt ser författarna att många begränsningar i Kibana kan komma att elimineras i framtiden. 
 
 \section{Förslag på framtida arbete}
 Under förberedelsen av data inför visualisering i Kibana visade det sig att data måste vara format som är kompatibla med Kibana. Det skulle därför vara lämpligt att undersöka hur modifieringen av data innan de kan visualiseras i Kibana kan ske på ett effektivt och icke tidskrävande sätt. Detta skulle gynna UX-designprocessen vid användning av Kibana eftersom det är ett av krav systemet ska vara klar innan visualisering av data. En undersökning kring detta skulle alltså hitta ett sätt att förkorta tiden som spenderas på att få in data i Kibana vilket skulle leda till att UX-designprocessen kan påbörjas snabbare.
